--- a/FrontendMonitoring/Components/Pages/Login.razor
+++ b/FrontendMonitoring/Components/Pages/Login.razor
@@ -80,7 +80,7 @@
 
         try
         {
-            var response = await Http.PostAsJsonAsync("https://bitbybitwebapi.azurewebsites.net/account/register", registerData);
+            var response = await Http.PostAsJsonAsync("https://bitbybit-api--0000005.orangecliff-c30465b7.northeurope.azurecontainerapps.io/account/register", registerData);
 
             if (response.IsSuccessStatusCode)
             {
@@ -115,7 +115,7 @@
 
         try
         {
-            var response = await Http.PostAsJsonAsync("https://bitbybitwebapi.azurewebsites.net/account/login", loginData);
+            var response = await Http.PostAsJsonAsync("https://bitbybit-api--0000005.orangecliff-c30465b7.northeurope.azurecontainerapps.io//account/login", loginData);
             if (response.IsSuccessStatusCode)
             {
                 var content = await response.Content.ReadAsStringAsync();
