--- a/FrontendMonitoring/Components/Pages/About.razor
+++ b/FrontendMonitoring/Components/Pages/About.razor
@@ -33,7 +33,7 @@
             <MudPaper Elevation="2" Class="responsive-padding card-animate text-center">
                 <MudIcon Icon="@Icons.Material.Filled.Person" Style="font-size: 3rem; color: var(--mud-palette-primary);" Class="mb-2" />
                 <MudText Typo="Typo.h6" Class="text-responsive-h6">Rishyan Syal</MudText>                <MudText Typo="Typo.body2" Class="text-responsive-body" Style="color: var(--mud-palette-text-secondary);">
-                    Hoofdontwikkelaar
+                    Scrum Master
                 </MudText>
             </MudPaper>
         </MudItem>
@@ -42,7 +42,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Person" Style="font-size: 3rem; color: var(--mud-palette-secondary);" Class="mb-2" />
                 <MudText Typo="Typo.h6" Class="text-responsive-h6">Yazan Dawud</MudText>
                 <MudText Typo="Typo.body2" Class="text-responsive-body" Style="color: var(--mud-palette-text-secondary);">
-                    Backend Ontwikkelaar
+                    Backend Ontwikkelaar & Code Beheer
                 </MudText>
             </MudPaper>
         </MudItem>
@@ -51,7 +51,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Person" Style="font-size: 3rem; color: var(--mud-palette-tertiary);" Class="mb-2" />
                 <MudText Typo="Typo.h6" Class="text-responsive-h6">Fabiano Pungol</MudText>
                 <MudText Typo="Typo.body2" Class="text-responsive-body" Style="color: var(--mud-palette-text-secondary);">
-                    AI Specialist
+                    AI Specialist & Notulist
                 </MudText>
             </MudPaper>
         </MudItem>
@@ -60,7 +60,7 @@
                 <MudIcon Icon="@Icons.Material.Filled.Person" Style="font-size: 3rem; color: var(--mud-palette-warning);" Class="mb-2" />
                 <MudText Typo="Typo.h6" Class="text-responsive-h6">Jason Van Hek</MudText>
                 <MudText Typo="Typo.body2" Class="text-responsive-body" Style="color: var(--mud-palette-text-secondary);">
-                    Frontend Ontwikkelaar
+                    Documentatie & Frontend Ontwikkelaar
                 </MudText>
             </MudPaper>
         </MudItem>
