--- a/FrontendMonitoring/Components/Pages/Dashboard.razor
+++ b/FrontendMonitoring/Components/Pages/Dashboard.razor
@@ -72,12 +72,13 @@
             </MudPaper>
         </MudItem>        <!-- Afvalstromen -->
         <MudItem xs="12" sm="12" md="6" Class="dashboard-grid-item">
-            <MudPaper Elevation="2" Class="pa-4 card-animate card-mobile-responsive dashboard-card">
-                <MudText Typo="Typo.h6" Class="text-responsive-h6">Afvalstromen</MudText>
-                <MudText Typo="Typo.subtitle1" Class="mb-2">
-                    Meest voorkomend: <b>@MostCommonTrashType</b>
-                </MudText>
-            </MudPaper>
+            @* <MudPaper Elevation="2" Class="pa-4 card-animate card-mobile-responsive dashboard-card"> *@
+            @*     <MudText Typo="Typo.h6" Class="text-responsive-h6">Afvalstromen</MudText> *@
+            @*     <MudText Typo="Typo.subtitle1" Class="mb-2"> *@
+            @*         Meest voorkomend: <b>@MostCommonTrashType</b> *@
+            @*     </MudText> *@
+            @* </MudPaper> *@
+
             <MudChart ChartType="ChartType.Bar" ChartSeries="@Series" XAxisLabels="@XAxisLabels" Width="100%" Height="350px">
                 <CustomGraphics>
                     <style>
@@ -88,10 +89,15 @@
                         .Rrrrr {
                             font: italic 40px Helvetica;
                             fill: rgb(62,44,221);
+                            padding: 20px;
+
+
                         }
                     </style>
                 </CustomGraphics>
             </MudChart>
+
+
         </MudItem>
 
 
@@ -236,12 +242,19 @@
         .Select(g => g.Key)
         .FirstOrDefault() ?? "Onbekend";
 
-    public List<ChartSeries> Series = new List<ChartSeries>()
+    public List<ChartSeries> Series = new List<ChartSeries>
+{
+    new ChartSeries
     {
-        new ChartSeries() { Name = "Plastic", Data = new double[] { 40, 20, 25, 27, 46, 60, 48, 80, 15 } },
-        new ChartSeries() { Name = "Papier", Data = new double[] { 19, 24, 35, 13, 28, 15, 13, 16, 31 } },
-        new ChartSeries() { Name = "Organisch", Data = new double[] { 8, 6, 11, 13, 4, 16, 10, 16, 18 } },
+        Name = "Litter frequency",
+        Data = new double[] { 12, 24, 19, 15, 29, 67, 45, 50, 31, 9 }
+    }
+};
+
+    public string[] XAxisLabels = new string[]
+    {
+    "battery", "can", "cardboard", "carton", "glass",
+    "paper", "p. bag", "p. bottle", "p. cap", " pop tab"
     };
-    public string[] XAxisLabels = { "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep" };
 
 }
