--- a/FrontendMonitoring/Components/Layout/NavMenu.razor
+++ b/FrontendMonitoring/Components/Layout/NavMenu.razor
@@ -4,4 +4,7 @@
     <MudNavLink Href="statistics" Icon="@Icons.Material.Filled.BarChart">Statistieken</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavLink Href="how-it-works" Icon="@Icons.Material.Filled.Help">Hoe werkt het?</MudNavLink>
+    <MudNavLink Href="/ai-chat" Icon="@Icons.Material.Filled.SmartToy" Match="NavLinkMatch.All">
+        AI Analyse Chat
+    </MudNavLink>
 </MudNavMenu>
