changed AI model

--- a/FrontendMonitoring/Components/Pages/AiChat.razor
+++ b/FrontendMonitoring/Components/Pages/AiChat.razor
@@ -97,7 +97,7 @@
 
         var request = new
         {
-            model = "tinyllama:latest",
+            model = "phi3:latest",
             prompt = prompt,
             stream = true
         };
